--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
     <div id="app" class="container my-3" v-cloak>
         <h1>Pick-Up Pickleball</h1>
-        {{hello}}
+        <p><button type="button" class="btn btn-danger" @click="clearStorage" >Clear Storage</button></p>
+        <form @submit="addPlayer">
+            <input v-model="newPlayer" type="text" >
+        </form>
+        <ul>
+            <li v-for="player in players" @click="removePlayer(player)">{{player.name}}</li>
+        </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="app.js"></script>
