--- a/public/index.html
+++ b/public/index.html
@@ -125,6 +125,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script src="app.js"></script>
+    <script src="/components/score-input.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
