Added player management to component

--- a/public/index.html
+++ b/public/index.html
@@ -12,35 +12,12 @@
     <div id="app" class="container my-3" v-cloak>
         <h1>Pick-Up Pickleball</h1>
         <p><button type="button" class="btn btn-danger" @click="clearStorage" >Clear Storage</button></p>
-        <form @submit="addPlayer">
-            <input v-model="newPlayer" type="text" player="Player Name">
-        </form>
-        <div class="row mb-3">
-            <div class="col">
-                <div class="d-flex mb-1 align-items-center" v-for="player in players">
-                    <h2 :title="player.id">{{player.name}}</h2>
-                    <div class="btn-group ms-auto" role="group" aria-label="Basic outlined example">
-                        <button type="button" class="btn" :class="{ 'btn-success': player.available, 'btn-warning': !player.available }" @click="toggleAvailable(player.id)">Available</button>
-                        <button type="button" class="btn btn-primary" @click="addToDisallow(player.id)">--></button>
-                        <button type="button" class="btn btn-danger" @click="removePlayer(player.id)">Remove</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <h2>Exclusion Teams</h2>
-                <ul>
-                    <li v-for="member in disallowTeam" @click="removeFromDisallow(member.id)">{{member.name}}</li>
-                </ul>
-                <div class="btn-group" role="group" aria-label="Basic outlined example">
-                    <button type="button" class="btn btn-danger" v-if="disallowTeam.length > 0" @click="clearDisallowTeam">Clear</button>
-                    <button type="button" class="btn btn-success" v-if="disallowTeam.length > 1" @click="addToDisallowList">Add</button>
-                </div>
-                <h2>Exclusion List</h2>
-                <ul>
-                    <li v-for="team in disallowList" @click="removeFromDisallowList(team)">{{team[0].name}} & {{team[1].name}}</li>
-                </ul>
-            </div>
-        </div>
+        <manage-players
+            :new-player="newPlayer"
+            :players="players"
+            :disallow-team="disallowTeam"
+            :disallow-list="disallowList"
+        ></manage-players>
         <div class="row">
             <div class="col">
                 <p><button type="button" class="btn btn-primary" @click="createMatches">Start Session</button></p>
@@ -131,7 +108,9 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script src="/util.js"></script>
     <script src="/components/score-input.js"></script>
+    <script src="/components/manage-players.js"></script>
     <script src="/app.js"></script>
 </body>
 </html>
