Moved session management to compoonent

--- a/public/index.html
+++ b/public/index.html
@@ -18,63 +18,15 @@
             :disallow-team="disallowTeam"
             :disallow-list="disallowList"
         ></manage-players>
-        <div class="row">
-            <div class="col">
-                <p><button type="button" class="btn btn-primary" @click="createMatches">Start Session</button></p>
-                <div class="row">
-                    <div class="col-12 col-md-6 mb-3" v-for="match in nextMatches" v-bind:key="match.id">
-                        <div class="next-match row p-2 mx-1">
-                            <div class="align-items-center justify-content-around d-flex mb-3 gap-2">
-                                <div class="next-match__team next-match__team--1">
-                                    {{match.team1.p1.name}} <br>
-                                    {{match.team1.p2.name}}
-                                </div>
-                                <div class="text-center">vs.</div>
-                                <div class="next-match__team next-match__team--2">
-                                    {{match.team2.p1.name}} <br>
-                                    {{match.team2.p2.name}}
-                                </div>
-                            </div>
-                            <div class="justify-content-center d-flex gap-2">
-                                <button type="button" class="btn btn-success" @click="startMatch(match)">Play</button>
-                                <button type="button" class="btn btn-warning" @click="match.skip='true'">Skip</button>
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-            </div>
-            <div class="col">
-                <h2 class="mb-3">Current Matches</h2>
-                <div class="mb-3" v-for="match in matches" v-if="match.inProgress " v-bind:key="match.id">
-                    <div class="next-match next-match--in-progress row p-2 mx-1">
-                        <div class="align-items-center justify-content-around d-flex mb-3 gap-2">
-                            <div class="next-match__team next-match__team--1">
-                                {{match.team1.p1.name}} <br>
-                                {{match.team1.p2.name}}
-                                <div v-if="match.endTS" >{{match.score1}}</div>
-                            </div>
-                            <div class="text-center">vs.</div>
-                            <div class="next-match__team next-match__team--2">
-                                {{match.team2.p1.name}} <br>
-                                {{match.team2.p2.name}}
-                                <div v-if="match.endTS" >{{match.score2}}</div>
-                            </div>
-                        </div>
-                        <div v-if="match.endTS" >
-                            <score-input :match="match" :key="'si-' + match.id"></score-input>
-                        </div>
-                        <div class="justify-content-center d-flex gap-2" v-if="!match.endTS">
-                            <button type="button" class="btn btn-primary" @click="matchOver(match)">Finish</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <manage-session
+            :players="players"
+            :matches="matches"
+        ></manage-session>
+        
         <div class="row">
             <details>
                 <summary>Debug</summary>
                 <div class="row mt-3">
-                    <p><button type="button" class="btn btn-primary" @click="createMatches">Create Match ups</button> <button type="button" class="btn btn-outline-primary" @click="spreadMore">Spread More</button></p>
                     <div class="col-md-3">
                         <p class="strong">Num Teams: {{ teams.length }}</p>
                         <ul>
@@ -110,6 +62,7 @@
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="/util.js"></script>
     <script src="/components/score-input.js"></script>
+    <script src="/components/manage-session.js"></script>
     <script src="/components/manage-players.js"></script>
     <script src="/app.js"></script>
 </body>
